@@ -1,5 +1,6 @@
 Version 0.4.29, 2013-05-13
 --------------
++ Ztring: Adding some Date_From_Seconds_* methods
 x Ztring: Ztring_NoZero option was not correctly implemented
 x File: Write only is not possible with ios_base::out (file is truncated) on Linux
 x Dir: Include_Dirs only was not working
